Added specs for blocks Added preliminary association support @wip d.actions support

--- a/spec/dummy/app/views/books/show.html.erb
+++ b/spec/dummy/app/views/books/show.html.erb
@@ -1,12 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<%= display_for @book do |d| %>
-  <dl>
-    <%= d.display  :title %>
-    <%= d.currency :price %>
-    <%= d.display  :description %>
-  </dl>
-<% end %>
+<dl>
+  <%= display_for @book, :as => :definition_list do |d| %>
+    <%= d.display :title %>
+    <%= d.display :price, :as => :currency %>
+    <%= d.display :description %>
+    <%= d.display :author %>
+  <% end %>
+</dl>
 
 <%= link_to 'Edit', edit_book_path(@book) %> |
 <%= link_to 'Back', books_path %>
