--- a/spec/dummy/app/views/books/_form.html.erb
+++ b/spec/dummy/app/views/books/_form.html.erb
@@ -23,6 +23,10 @@
     <%= f.label :description %><br />
     <%= f.text_area :description %>
   </div>
+  <div class="field">
+    <%= f.label :author_id %><br />
+    <%= f.select :author_id, Author.all.collect {|a| [ a.to_s, a.id ] }, :prompt => true %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
