--- a/spec/dummy/app/views/books/index.html.erb
+++ b/spec/dummy/app/views/books/index.html.erb
@@ -12,12 +12,15 @@
 
 <% @books.each do |book| %>
   <%= display_for book, :as => :table do |d| %>
-    <%= d.display :title %>
-    <%= d.currency :price %>
-    <%= d.display :description %>
-    <td><%= link_to 'Show', book %></td>
-    <td><%= link_to 'Edit', edit_book_path(book) %></td>
-    <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <tr>
+      <%= d.display :title %>
+      <%= d.display :price, :as => :currency %>
+      <%= d.display :description %>
+      <%= d.actions %>
+      <td><%= link_to 'Show', book %></td>
+      <td><%= link_to 'Edit', edit_book_path(book) %></td>
+      <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    </tr>
   <% end %>
 <% end %>
 </table>
